// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search reducer should handle CLEAR_SEARCH_RESULTS 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "pageToken": "",
  "query": "abc",
  "results": Array [],
}
`;

exports[`search reducer should handle FETCH_SEARCH_FAILURE 1`] = `
Object {
  "error": true,
  "isFetching": false,
  "pageToken": "",
  "query": "a",
  "results": Array [],
}
`;

exports[`search reducer should handle FETCH_SEARCH_REQUEST 1`] = `
Object {
  "error": false,
  "isFetching": true,
  "pageToken": "",
  "query": "",
  "results": Array [],
}
`;

exports[`search reducer should handle FETCH_SEARCH_SUCCESS 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "pageToken": "CBQQAA",
  "query": "a",
  "results": Array [
    Object {
      "id": "M8l2aGMjKHI",
    },
    Object {
      "id": "GcSACxUbqtg",
    },
  ],
}
`;

exports[`search reducer should handle UPDATE_SEARCH_QUERY 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "pageToken": "",
  "query": "a",
  "results": Array [],
}
`;

exports[`search reducer should handle UPDATE_SEARCH_QUERY 2`] = `
Object {
  "error": false,
  "isFetching": false,
  "pageToken": "",
  "query": "ab",
  "results": Array [],
}
`;

exports[`search reducer should handle unknown action type 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "pageToken": "",
  "query": "",
  "results": Array [],
}
`;

exports[`search reducer should return initial state 1`] = `
Object {
  "error": false,
  "isFetching": false,
  "pageToken": "",
  "query": "",
  "results": Array [],
}
`;
